08-Jan-2003 by Matthias Braun
-hacked a quick connect option into netpanzer, so that external tools can easily
 invoke netpanzer to join directly on a specific server. (Maybe some commandline
 freaks also prefer this method...)

05-Jan-2003 by Matthias Braun
-server browser works so far
-converted yet another array like class in ProjectileInterface to std::list
-make IRC lib abort earlier if server address can't be resolved

04-Jan-2003 by Matthias Braun
-started a new IRC library
-started a commandline server browser tool

21-Dec-2003 by Matthias Braun
-rewrote some parts of the UnitList and Unit synchronisation code

10-Dec-2003 by Matthias Braun
-fixed crash when target unit of an attacking unit was destroyed too early

05-Dec-2003 by Matthias Braun
-added network paket debugger class
-removed some more unused code from the Surface class

04-Dec-2003 by Matthias Braun
-eleminated usage of cGrowList class and replaced it with std::vector

01-Dec-2003 by Matthias Braun
-eleminated a few more valgrind warnings
-converted an ArrayTemplate in ObjectiveInterface to an std::vector

29-Nov-2003 by Matthias Braun
-fixed wrong read in blitWorld when we're rendering to lower right edge of the
 map.

28-Nov-2003 by Matthias Braun
-converted UI classes to use SDL_Surface

28-Nov-2003 by Michel Metzger
-first release of the new UI lib.
-add a temporary test panel to the game (F12)
	
26-Nov-2003 by Matthias Braun
-made scrolling in tilesetview working correctly
-template loading and saving in the editor should work now
-started working on map rendering code for the editor and future netpanzer
 versions

24-Nov-2003 by Hankin Chick
-created IRCLobbyServer, so IRCLobby should work by itself.
-fixed repeatitive mouse move/dragged messages even when mouse didn't move
-added scale/shade/dotsize buttons on the minimap

24-Nov-2003 by Matthias Braun
-converted the SelectionList to std::vector, also removed limit of maximum
 select units while doing this.