@@ -1,10 +1,14 @@
 #ifndef __TILESETVIEW_HPP__
 #define __TILESETVIEW_HPP__
 
+#include <vector>
+
 #include <wx/wx.h>
 #include <wx/dnd.h>
 
 #include "SDLView.hpp"
+
+class TileTemplate;
 
 class TileSetView : public SDLView
 {
@@ -26,8 +30,15 @@ public:
     void setViewMode(ViewMode newmode);
 
 private:
+    void updateViewTiles();
+    void updateViewTemplates();
+    void paintTiles();
+    void paintTemplates();
+    void paintTemplate(TileTemplate*, int x, int y);
+    
     virtual void redraw();
     void OnScroll(wxScrollEvent& event);
+    void OnMouseClick(wxMouseEvent& event);
 
     void paintContent();
     
@@ -46,11 +57,23 @@ private:
     ViewMode viewmode;
 
     // Scroll position
-    iXY tileborder, tilesize;
+    iXY border, tilesize;
     int tilexcount;
     int tileycount;
     int tileywindow;
     int scrollpos;
+
+    // for template view
+    size_t firstTemplate;
+    std::vector<size_t> templateScrollList;
+
+    enum {
+        ID_VIEWTILES = 1,
+        ID_VIEWTEMPLATES = 2
+    };
+
+    void OnViewTiles(wxCommandEvent& event);
+    void OnViewTemplates(wxCommandEvent& event);
     
     DECLARE_EVENT_TABLE()
 };
